--- a/MoniHelper/Properties/Resources.resx
+++ b/MoniHelper/Properties/Resources.resx
@@ -122,6 +122,15 @@
 * 模拟助手部分源码借鉴MifareOneTool，
 * 在此向原作者XAS-712致敬！
 * 因MifareOneTool为GPL协议，本软件同样以GPL协议开源！
+* 若对本软件进行修改，必须将源代码与发布的软件一同提供，
+*   否则将会严重违反许可协议！
+* 您点击“确认”时，即视为您已同意本声明的全部
+*   并且愿意遵守许可协议。
+* ***********************************************************
+* 特别点名某位淘宝JS修改GPL软件不开源的无耻行为
+*   对没错就是那家卖长方形小黑盒NFC的“USB充**士”
+* 若您擅自将本界面声明移除或修改即代表您愿意承担由此带来的
+*   任何责任。
 * ***********************************************************
 * 本软件仅用于学习研究用途,不得用于非法用途。
 * 因不正当使用所造成任何后果与作者无关！由使用人自行负责！
